--- a/styles/_itemsColumn.scss
+++ b/styles/_itemsColumn.scss
@@ -5,6 +5,7 @@
     background-color: $color-header-background;
     color: $color-white;
     margin-bottom: 8px;
+    box-shadow: 0 0 6px 2px $color-shadow;
     svg {
       position: relative;
       top: 2px;
@@ -19,6 +20,7 @@
     flex: 1 1 auto;
     h2 {
       margin-bottom: 0;
+      box-shadow: unset;
     }
   }
 }
